@@ -1,5 +1,13 @@
 2009-05-10  Jan Hubicka  <jh@suse.cz>
 
+	* tree-inline.c (delete_unreachable_blocks_update_callgraph): Declare.
+	(estimate_move_cost): Assert that it does not get called for VOID_TYPE_P.
+	(estimate_num_insns): Skip VOID types in argument handling.
+	(optimize_inline_calls): Delete unreachable blocks and verify that
+	callgraph is valid.
+
+2009-05-10  Jan Hubicka  <jh@suse.cz>
+
 	* cgraphbuild.c (record_reference): Use cgraph_mark_address_taken_node.
 	* cgraph.c (cgraph_mark_address_taken_node): New function.
 	(dump_cgraph_node): Dump new flag.
